--- a/Oops-Android/app/src/main/res/layout/fragment_sting.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_sting.xml
@@ -68,8 +68,8 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <!-- 친구 5명 일 때 -->
-    <FrameLayout
-        android:id="@+id/rLayout_sting_friends_5"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cLayout_sting_friends_5"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="42dp"
@@ -79,123 +79,107 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/btn_sting_friends">
 
-        <!-- 친구1, 2 -->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cv_sting_friend5_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="100dp"
-                android:scaleType="centerCrop"
-                app:cardElevation="@null"
-                android:layout_marginTop="27dp"
-                android:layout_marginEnd="75dp"
-                android:layout_alignParentTop="true"
-                android:layout_toStartOf="@id/cv_sting_friend5_2">
-
-                <ImageView
-                    android:id="@+id/iv_sting_friend5_1"
-                    android:layout_width="57dp"
-                    android:layout_height="57dp"
-                    android:src="@drawable/ic_friends_profile_default_50"/>
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cv_sting_friend5_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="40dp"
-                app:cardCornerRadius="100dp"
-                android:scaleType="centerCrop"
-                app:cardElevation="@null"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true">
-                <ImageView
-                    android:id="@+id/iv_sting_friend5_2"
-                    android:layout_width="95dp"
-                    android:layout_height="95dp"
-                    android:src="@drawable/ic_friends_profile_default_50"/>
-            </androidx.cardview.widget.CardView>
-        </RelativeLayout>
-
-        <!-- 친구3 -->
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <!-- 친구 5-1 -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_sting_friend5_1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="122dp">
+            app:cardCornerRadius="100dp"
+            android:scaleType="centerCrop"
+            app:cardElevation="@null"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/cv_sting_friend5_2"
+            app:layout_constraintBottom_toBottomOf="@id/cv_sting_friend5_2">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cv_sting_friend5_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="100dp"
-                android:scaleType="centerCrop"
-                app:cardElevation="@null"
-                android:layout_marginStart="44dp"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true">
+            <ImageView
+                android:id="@+id/iv_sting_friend5_1"
+                android:layout_width="57dp"
+                android:layout_height="57dp"
+                android:src="@drawable/ic_friends_profile_default_50"/>
+        </androidx.cardview.widget.CardView>
 
-                <ImageView
-                    android:id="@+id/iv_sting_friend5_3"
-                    android:layout_width="79dp"
-                    android:layout_height="79dp"
-                    android:src="@drawable/ic_friends_profile_default_50"/>
-            </androidx.cardview.widget.CardView>
-        </RelativeLayout>
-
-        <!-- 친구4 -->
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <!-- 친구 5-2 -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_sting_friend5_2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="150dp">
+            android:layout_marginEnd="40dp"
+            app:cardCornerRadius="100dp"
+            android:scaleType="centerCrop"
+            app:cardElevation="@null"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+            <ImageView
+                android:id="@+id/iv_sting_friend5_2"
+                android:layout_width="95dp"
+                android:layout_height="95dp"
+                android:src="@drawable/ic_friends_profile_default_50"/>
+        </androidx.cardview.widget.CardView>
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cv_sting_friend5_4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="100dp"
-                android:scaleType="centerCrop"
-                app:cardElevation="@null"
-                android:layout_marginEnd="76dp"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true">
+        <!-- 친구 5-3 -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_sting_friend5_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="100dp"
+            android:scaleType="centerCrop"
+            app:cardElevation="@null"
+            android:layout_marginTop="56dp"
+            android:layout_marginStart="44dp"
+            android:layout_marginBottom="-27dp"
+            app:layout_constraintTop_toBottomOf="@id/cv_sting_friend5_1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/cv_sting_friend5_4">
 
-                <ImageView
-                    android:id="@+id/iv_sting_friend5_4"
-                    android:layout_width="79dp"
-                    android:layout_height="79dp"
-                    android:src="@drawable/ic_friends_profile_default_50"/>
-            </androidx.cardview.widget.CardView>
-        </RelativeLayout>
+            <ImageView
+                android:id="@+id/iv_sting_friend5_3"
+                android:layout_width="79dp"
+                android:layout_height="79dp"
+                android:src="@drawable/ic_friends_profile_default_50"/>
+        </androidx.cardview.widget.CardView>
 
-        <!-- 친구5 -->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <!-- 친구 5-4 -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_sting_friend5_4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="100dp"
+            android:scaleType="centerCrop"
+            app:cardElevation="@null"
+            android:layout_marginTop="102dp"
+            app:layout_constraintTop_toBottomOf="@id/cv_sting_friend5_2"
+            app:layout_constraintStart_toEndOf="@id/cv_sting_friend5_3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/cv_sting_friend5_5">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cv_sting_friend5_5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="100dp"
-                android:scaleType="centerCrop"
-                app:cardElevation="@null"
-                android:layout_marginStart="108dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentBottom="true">
+            <ImageView
+                android:id="@+id/iv_sting_friend5_4"
+                android:layout_width="79dp"
+                android:layout_height="79dp"
+                android:src="@drawable/ic_friends_profile_default_50"/>
+        </androidx.cardview.widget.CardView>
 
-                <ImageView
-                    android:id="@+id/iv_sting_friend5_5"
-                    android:layout_width="114dp"
-                    android:layout_height="114dp"
-                    android:src="@drawable/ic_friends_profile_default_50"/>
-            </androidx.cardview.widget.CardView>
-        </RelativeLayout>
+        <!-- 친구 5-5 -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_sting_friend5_5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="100dp"
+            android:scaleType="centerCrop"
+            app:cardElevation="@null"
+            android:layout_marginStart="108dp"
+            app:layout_constraintTop_toBottomOf="@id/cv_sting_friend5_4"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
 
-    </FrameLayout>
+            <ImageView
+                android:id="@+id/iv_sting_friend5_5"
+                android:layout_width="114dp"
+                android:layout_height="114dp"
+                android:src="@drawable/ic_friends_profile_default_50"/>
+        </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
         android:id="@+id/iv_sting_hand_2"
