--- a/Oops-Android/app/src/main/res/layout/fragment_sting.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_sting.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clipToPadding="false"
     android:background="@color/White"
     android:clipChildren="false"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -67,6 +66,101 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
+    <!-- 친구 4명 일 때 -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cLayout_sting_friends_4"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginBottom="48dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_sting_sub_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_sting_friends">
+
+        <!-- 친구 4-1 -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_sting_friend4_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="40dp"
+            app:cardCornerRadius="100dp"
+            android:scaleType="centerCrop"
+            app:cardElevation="@null"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+            <ImageView
+                android:id="@+id/iv_sting_friend4_1"
+                android:layout_width="95dp"
+                android:layout_height="95dp"
+                android:src="@drawable/ic_friends_profile_default_50"/>
+        </androidx.cardview.widget.CardView>
+
+        <!-- 친구 4-2 -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_sting_friend4_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="100dp"
+            android:scaleType="centerCrop"
+            app:cardElevation="@null"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="44dp"
+            app:layout_constraintTop_toBottomOf="@id/cv_sting_friend4_1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/cv_sting_friend4_3">
+
+            <ImageView
+                android:id="@+id/iv_sting_friend4_2"
+                android:layout_width="79dp"
+                android:layout_height="79dp"
+                android:src="@drawable/ic_friends_profile_default_50"/>
+        </androidx.cardview.widget.CardView>
+
+        <!-- 친구 4-3 -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_sting_friend4_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="100dp"
+            android:scaleType="centerCrop"
+            app:cardElevation="@null"
+            android:layout_marginTop="81dp"
+            app:layout_constraintTop_toBottomOf="@id/cv_sting_friend4_1"
+            app:layout_constraintStart_toEndOf="@id/cv_sting_friend4_2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/cv_sting_friend4_4">
+
+            <ImageView
+                android:id="@+id/iv_sting_friend4_3"
+                android:layout_width="79dp"
+                android:layout_height="79dp"
+                android:src="@drawable/ic_friends_profile_default_50"/>
+        </androidx.cardview.widget.CardView>
+
+        <!-- 친구 4-4 -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_sting_friend4_4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="100dp"
+            android:scaleType="centerCrop"
+            app:cardElevation="@null"
+            android:layout_marginTop="22dp"
+            android:layout_marginStart="93dp"
+            android:layout_marginBottom="28dp"
+            app:layout_constraintTop_toBottomOf="@id/cv_sting_friend4_3"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <ImageView
+                android:id="@+id/iv_sting_friend4_4"
+                android:layout_width="114dp"
+                android:layout_height="114dp"
+                android:src="@drawable/ic_friends_profile_default_50"/>
+        </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <!-- 친구 5명 일 때 -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cLayout_sting_friends_5"
@@ -74,6 +168,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="42dp"
         android:layout_marginBottom="35dp"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/tv_sting_sub_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -203,8 +298,7 @@
         android:paddingEnd="43dp"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
-        android:background="@drawable/all_radius_50"
-        android:backgroundTint="@color/Main_500"
+        android:background="@drawable/ic_sting_list_btn"
         android:layout_marginBottom="40dp"
         android:layout_gravity="center"
         android:elevation="10dp"
