--- a/Oops-Android/app/src/main/res/layout/fragment_sting.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_sting.xml
@@ -66,6 +66,80 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
+    <!-- 친구 3명 일 때 -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cLayout_sting_friends_3"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="58dp"
+        android:layout_marginBottom="119dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_sting_sub_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_sting_friends">
+
+        <!-- 친구 3-1 -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_sting_friend3_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="40dp"
+            app:cardCornerRadius="100dp"
+            android:scaleType="centerCrop"
+            app:cardElevation="@null"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+            <ImageView
+                android:id="@+id/iv_sting_friend3_1"
+                android:layout_width="95dp"
+                android:layout_height="95dp"
+                android:src="@drawable/ic_friends_profile_default_50"/>
+        </androidx.cardview.widget.CardView>
+
+        <!-- 친구 3-2 -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_sting_friend3_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="100dp"
+            android:scaleType="centerCrop"
+            app:cardElevation="@null"
+            android:layout_marginTop="21dp"
+            android:layout_marginStart="70dp"
+            app:layout_constraintTop_toBottomOf="@id/cv_sting_friend3_1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/cv_sting_friend3_3">
+
+            <ImageView
+                android:id="@+id/iv_sting_friend3_2"
+                android:layout_width="57dp"
+                android:layout_height="57dp"
+                android:src="@drawable/ic_friends_profile_default_50"/>
+        </androidx.cardview.widget.CardView>
+
+        <!-- 친구 3-3 -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_sting_friend3_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="100dp"
+            android:scaleType="centerCrop"
+            app:cardElevation="@null"
+            android:layout_marginTop="63dp"
+            android:layout_marginEnd="125dp"
+            app:layout_constraintTop_toBottomOf="@id/cv_sting_friend3_2"
+            app:layout_constraintStart_toEndOf="@id/cv_sting_friend3_2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <ImageView
+                android:id="@+id/iv_sting_friend3_3"
+                android:layout_width="98dp"
+                android:layout_height="98dp"
+                android:src="@drawable/ic_friends_profile_default_50"/>
+        </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <!-- 친구 4명 일 때 -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cLayout_sting_friends_4"
@@ -73,6 +147,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="42dp"
         android:layout_marginBottom="48dp"
+        android:visibility="invisible"
         app:layout_constraintTop_toBottomOf="@id/tv_sting_sub_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -168,7 +243,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="42dp"
         android:layout_marginBottom="35dp"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintTop_toBottomOf="@id/tv_sting_sub_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
