--- a/Oops-Android/app/src/main/res/layout/activity_login.xml
+++ b/Oops-Android/app/src/main/res/layout/activity_login.xml
@@ -1,11 +1,250 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/login"
+    android:orientation="vertical"
+    android:paddingStart="14dp"
+    android:paddingEnd="14dp"
+    android:background="@color/White"
     tools:context=".ui.Login.LoginActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/iv_login_logo"
+        android:layout_width="26dp"
+        android:layout_height="70dp"
+        android:src="@drawable/ic_logo"
+        android:layout_gravity="center"
+        android:layout_marginTop="70dp"
+        android:layout_weight="0.2"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:paddingTop="15dp"
+        android:layout_weight="6">
+
+        <!-- 이메일 박스 -->
+        <LinearLayout
+            android:id="@+id/lLayout_login_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <!-- 이메일 -->
+            <EditText
+                android:id="@+id/edt_login_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/login_box_bg"
+                android:maxLines="1"
+                android:hint="ID(E-mail)"
+                android:textColorHint="@color/Gray_300"
+                android:textSize="14sp"
+                android:textColor="@color/Main_500"
+                android:fontFamily="@font/pretendard_medium"
+                android:inputType="textEmailAddress"
+                android:imeOptions="actionNext"
+                android:paddingTop="14dp"
+                android:paddingStart="24dp"
+                android:paddingEnd="24dp"
+                android:paddingBottom="14dp"
+                android:theme="@style/loginEditTextStyle"/>
+
+            <!-- 이메일 경고 문구 -->
+            <TextView
+                android:id="@+id/tv_login_email_alert"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="입력된 이메일이 올바르지 않아요"
+                android:textSize="12sp"
+                android:textColor="@color/Red_Dark"
+                android:fontFamily="@font/pretendard_semibold"
+                android:visibility="gone"
+                android:layout_marginTop="4dp"
+                android:layout_marginStart="24dp"/>
+        </LinearLayout>
+
+        <!-- 비밀번호 박스 -->
+        <LinearLayout
+            android:id="@+id/lLayout_login_pwd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="21dp">
+
+            <!-- 비밀번호 -->
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <EditText
+                    android:id="@+id/edt_login_pwd"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/login_box_bg"
+                    android:maxLines="1"
+                    android:hint="Password"
+                    android:textColorHint="@color/Gray_300"
+                    android:textSize="14sp"
+                    android:textColor="@color/Main_500"
+                    android:fontFamily="@font/pretendard_medium"
+                    android:inputType="textPassword"
+                    android:imeOptions="actionDone"
+                    android:paddingTop="14dp"
+                    android:paddingStart="24dp"
+                    android:paddingEnd="48dp"
+                    android:paddingBottom="14dp"
+                    android:theme="@style/loginEditTextStyle"/>
+                <ImageButton
+                    android:id="@+id/iBtn_login_toggle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_pwd_mask_on_25"
+                    android:layout_gravity="end|center_vertical"
+                    android:background="@color/transparent"
+                    android:paddingTop="14dp"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="16dp"
+                    android:paddingBottom="14dp"/>
+            </FrameLayout>
+
+            <!-- 비밀번호 경고 문구 -->
+            <TextView
+                android:id="@+id/tv_login_pwd_alert"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="비밀번호는 8자리 이상, 특수문자가 포함돼야 해요"
+                android:textSize="12sp"
+                android:textColor="@color/Red_Dark"
+                android:fontFamily="@font/pretendard_semibold"
+                android:visibility="gone"
+                android:layout_marginTop="4dp"
+                android:layout_marginStart="24dp"/>
+        </LinearLayout>
+
+        <!-- 로그인 버튼 -->
+        <Button
+            android:id="@+id/btn_login_confirm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/login_box_bg"
+            android:backgroundTint="@color/Gray_100"
+            android:text="로그인"
+            android:textSize="16sp"
+            android:fontFamily="@font/pretendard_semibold"
+            android:textColor="@color/Gray_400"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:layout_marginTop="32dp"
+            android:outlineProvider="none"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="22dp"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/tv_login_id_pw_find"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ID/PW 찾기"
+                android:textSize="14sp"
+                android:textColor="@color/Gray_300"
+                android:fontFamily="@font/pretendard_regular"
+                android:layout_marginEnd="24dp"/>
+
+            <!-- 회원가입 버튼 -->
+            <TextView
+                android:id="@+id/tv_login_signup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="회원가입"
+                android:textSize="14sp"
+                android:textColor="@color/Gray_300"
+                android:fontFamily="@font/pretendard_regular"/>
+        </LinearLayout>
+    </LinearLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="32dp"
+        android:layout_weight="4">
+
+        <LinearLayout
+            android:id="@+id/lLayout_login_line"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:background="#CC9CA3AF"
+                android:layout_weight="1"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="더욱 쉽게 시작하세요"
+                android:textSize="14sp"
+                android:textColor="@color/Gray_400"
+                android:fontFamily="@font/pretendard_medium"
+                android:layout_marginStart="12dp"
+                android:layout_marginEnd="12dp"/>
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:background="#CC9CA3AF"
+                android:layout_weight="1"/>
+        </LinearLayout>
+
+        <!-- 소셜 로그인 버튼 -->
+        <LinearLayout
+            android:id="@+id/lLayout_login_social"
+            android:layout_width="112dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="22dp"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_gravity="center"
+            app:layout_constraintTop_toBottomOf="@id/lLayout_login_line"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <!-- 구글 로그인 -->
+            <ImageView
+                android:id="@+id/iBtn_login_google"
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:layout_marginEnd="18dp"
+                android:outlineProvider="background"
+                android:src="@drawable/ic_login_google_18"
+                android:background="@drawable/login_google_bg"
+                android:scaleType="centerCrop"
+                android:elevation="10dp"
+                android:outlineSpotShadowColor="#1A000000"/>
+
+            <!-- 네이버 로그인 -->
+            <ImageView
+                android:id="@+id/iBtn_login_naver"
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:outlineProvider="background"
+                android:src="@drawable/ic_login_naver_18"
+                android:background="@drawable/login_google_bg"
+                android:scaleType="centerCrop"
+                android:elevation="10dp"
+                android:outlineSpotShadowColor="#1A000000"/>
+        </LinearLayout>
+
