--- a/Oops-Android/app/src/main/res/layout/activity_login.xml
+++ b/Oops-Android/app/src/main/res/layout/activity_login.xml
@@ -248,3 +248,96 @@
                 android:outlineSpotShadowColor="#1A000000"/>
         </LinearLayout>
 
+        <!-- 구글 로그인 버튼 기준 barrier -->
+        <androidx.constraintlayout.widget.Barrier
+            android:id="@+id/barrier_login_google"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:barrierDirection="start"
+            app:constraint_referenced_ids="lLayout_login_social"
+            app:layout_constraintTop_toBottomOf="@id/lLayout_login_social"
+            app:layout_constraintStart_toStartOf="@id/lLayout_login_social"/>
+
+        <!-- 구글 - 가장 최근에 로그인 했어요 -->
+        <LinearLayout
+            android:id="@+id/lLayout_login_recent_google"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:gravity="end"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="-88dp"
+            android:layout_marginBottom="40dp"
+            app:layout_constraintTop_toBottomOf="@id/lLayout_login_social"
+            app:layout_constraintStart_toStartOf="@id/barrier_login_google">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_arrow_up"
+                android:layout_marginEnd="37dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="가장 최근에 로그인했어요"
+                android:textSize="14sp"
+                android:textColor="#111827"
+                android:fontFamily="@font/pretendard_medium"
+                android:background="@drawable/all_radius_50"
+                android:backgroundTint="@color/Main_50"
+                android:paddingTop="6dp"
+                android:paddingStart="11dp"
+                android:paddingEnd="11dp"
+                android:paddingBottom="6dp"/>
+        </LinearLayout>
+
+        <!-- 네이버 로그인 버튼 기준 barrier -->
+        <androidx.constraintlayout.widget.Barrier
+            android:id="@+id/barrier_login_naver"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:barrierDirection="end"
+            app:constraint_referenced_ids="lLayout_login_social"
+            app:layout_constraintTop_toBottomOf="@id/lLayout_login_social"
+            app:layout_constraintEnd_toEndOf="@id/lLayout_login_social"/>
+
+        <!-- 네이버 - 가장 최근에 로그인 했어요 -->
+        <LinearLayout
+            android:id="@+id/lLayout_login_recent_naver"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:gravity="end"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="-21dp"
+            android:layout_marginBottom="40dp"
+            app:layout_constraintTop_toBottomOf="@id/lLayout_login_social"
+            app:layout_constraintEnd_toEndOf="@id/barrier_login_naver">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_arrow_up"
+                android:layout_marginEnd="37dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="가장 최근에 로그인했어요"
+                android:textSize="14sp"
+                android:textColor="#111827"
+                android:fontFamily="@font/pretendard_medium"
+                android:background="@drawable/all_radius_50"
+                android:backgroundTint="@color/Main_50"
+                android:paddingTop="6dp"
+                android:paddingStart="11dp"
+                android:paddingEnd="11dp"
+                android:paddingBottom="6dp"/>
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
