--- a/Oops-Android/app/src/main/res/values/themes.xml
+++ b/Oops-Android/app/src/main/res/values/themes.xml
@@ -31,7 +31,7 @@
         <item name="android:windowLightStatusBar">true</item>
     </style>
     <!-- 로그인 EditText 스타일 -->
-    <style name="loginEditTextStyle" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="LoginEditTextStyle" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorAccent">@color/Main_500</item>
     </style>
     <!-- 월간 캘린더 텍스트 스타일 -->
@@ -41,13 +41,13 @@
         <item name="android:fontFamily">@font/pretendard_bold</item>
     </style>
     <!-- 요일 -->
-    <style name="weekTextStyle">
+    <style name="WeekTextStyle">
         <item name="android:textColor">#707070</item>
         <item name="android:textSize">12sp</item>
         <item name="android:fontFamily">@font/pretendard_bold</item>
     </style>
     <!-- 날짜 -->
-    <style name="dateTextStyle">
+    <style name="DateTextStyle">
         <item name="android:textColor">#333333</item>
         <item name="android:textSize">16sp</item>
         <item name="android:fontFamily">@font/pretendard_bold</item>
