--- a/Oops-Android/app/src/main/res/layout/item_home_stuff.xml
+++ b/Oops-Android/app/src/main/res/layout/item_home_stuff.xml
@@ -20,6 +20,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:src="@drawable/ic_ex_img"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
