Feat: 개인정보 수집 바텀 시트 화면 구현
- enable 버튼, disable 버튼 style로 제작 완료

--- a/Oops-Android/app/src/main/res/layout/fragment_weekly.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_weekly.xml
@@ -156,7 +156,7 @@
             android:id="@+id/view_home_calendar"
             android:layout_width="77dp"
             android:layout_height="3dp"
-            android:background="@drawable/signup_btn_bg"
+            android:background="@drawable/wide_btn_bg"
             android:backgroundTint="#26707070"
             android:layout_marginBottom="12dp"
             android:layout_gravity="center"/>
