--- a/Oops-Android/app/src/main/res/drawable/wide_btn_bg.xml
+++ b/Oops-Android/app/src/main/res/drawable/wide_btn_bg.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 회원 가입 화면의 버튼 배경 -->
+<!-- Wide 버튼 배경 -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="146dp"/>
     <solid android:color="@color/Main_500"/>
