--- a/Oops-Android/app/src/main/res/layout/activity_sign_up.xml
+++ b/Oops-Android/app/src/main/res/layout/activity_sign_up.xml
@@ -118,15 +118,9 @@
         android:id="@+id/btn_sign_up_1_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        style="@style/WideButtonEnableStyle"
         android:text="다음"
-        android:textSize="20sp"
-        android:textColor="@color/White"
-        android:fontFamily="@font/pretendard_bold"
-        android:background="@drawable/signup_btn_bg"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp"
         android:layout_marginBottom="40dp"
-        android:outlineProvider="none"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
